fixed three spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,36 +20,6 @@ main {
   align-items: flex-start;
   min-width: 460px;
   width: 100%;
-
-  #side-nav {
-    margin-right: 1rem;
-    text-align: right;
-    background-color: #eee;
-    border-radius: 1rem;
-    padding: 1rem;
-    align-self: flex-start;
-    width: 10rem;
-    div {
-      cursor: pointer;
-
-      &.active {
-        background-color: #ccc;
-      }
-    }
-  }
-
-  #projects,
-  #project {
-    width: 100%;
-  }
-}
-app-projects,
-app-project {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 10px;
-  justify-items: center;
 }
 
 footer {
