--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -18,8 +18,6 @@ p {
 }
 
 article {
-  // padding-left: 5rem;
-  // padding-right: 5rem;
   height: 100%;
   width: 100vw;
   margin: 0px;
@@ -73,4 +71,32 @@ article {
   padding-right: 5rem;
   height: 100%;
   margin: 0px;
+}
+
+@media (max-width: 768px) {
+  .landing {
+    flex-direction: column;
+  }
+
+  .header,
+  .three-wrapper,
+  .projects-wrapper,
+  .about-wrapper,
+  .other-wrapper {
+    width: 100%;
+    text-align: center;
+    padding: 2rem 1rem;
+  }
+
+  h1 {
+    font-size: 6rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
 }
