--- a/src/app/components/three/three.component.scss
+++ b/src/app/components/three/three.component.scss
@@ -30,7 +30,7 @@ p {
   height: 100%;
 }
 
-// .engine-wrapper canvas {
-//   padding-top: 10rem;
-//   padding-left: 10rem;
-// }
+article {
+  width: 100%;
+  margin: 0px;
+}
